Add login modal and toast notifications UI
- Add login modal HTML with username/password form
- Add toast container for notifications
- Implement showToast() function in auth.js
- Add CSS styles for toast and modal-footer
- Fix missing UI elements for authentication flow

--- a/public/index.html
+++ b/public/index.html
@@ -431,6 +431,34 @@
     </footer>
   </div>
 
+  <!-- Login Modal -->
+  <div id="loginModal" class="modal" style="display: none;">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h2>🔐 Login</h2>
+        <button class="btn btn-close" onclick="hideLoginModal()">✕</button>
+      </div>
+      <form onsubmit="handleLoginSubmit(event)">
+        <div class="form-group">
+          <label for="loginUsername">Username:</label>
+          <input type="text" id="loginUsername" class="input" required autocomplete="username">
+        </div>
+        <div class="form-group">
+          <label for="loginPassword">Password:</label>
+          <input type="password" id="loginPassword" class="input" required autocomplete="current-password">
+        </div>
+        <div id="loginError" class="error-message"></div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" onclick="hideLoginModal()">Annulla</button>
+          <button type="submit" class="btn btn-primary">Login</button>
+        </div>
+      </form>
+    </div>
+  </div>
+
+  <!-- Toast Container -->
+  <div id="toastContainer" class="toast-container"></div>
+
   <!-- Socket.IO Client -->
   <script src="/socket.io/socket.io.js"></script>
   
