Implement mandatory password change on first login
- Add must_change_password field to users table
- Set flag to 1 for default admin user
- Return mustChangePassword in login and session endpoints
- Add /api/auth/change-password POST endpoint
- Force password change modal on first admin login
- Make modal non-closable when password change is mandatory
- Hide close button and cancel button in forced mode
- Prevent modal dismiss via backdrop click
- Validate that new password is different from current
- Clear must_change_password flag after successful change
- Update README with forced password change feature
- Add updateUserPassword and updateMustChangePassword methods in database

--- a/public/index.html
+++ b/public/index.html
@@ -468,14 +468,14 @@
   </div>
 
   <!-- Profile Modal -->
-  <div id="profileModal" class="modal" style="display: none;">
+  <div id="profileModal" class="modal" style="display: none;" onclick="if(event.target === this && !window.isPasswordChangeForced) hideProfileModal()">
     <div class="modal-content">
       <div class="modal-header">
         <h2>👤 Modifica Profilo</h2>
         <button class="btn btn-close" onclick="hideProfileModal()">✕</button>
       </div>
       <form onsubmit="handleProfileUpdate(event)">
-        <div class="form-group">
+        <div id="profileUsernameGroup" class="form-group">
           <label for="profileUsername">Username:</label>
           <input type="text" id="profileUsername" class="input" required autocomplete="username">
         </div>
