Add aggregated statistics system with multi-period historical data
New Features:
- Multi-period chart view: Real-time, 30 days, 3 months, 6 months, 1 year, 5 years, Max
- Blockchain scanner for historical data aggregation
- Aggregated statistics by period: daily, 3-day, weekly, monthly
- Automatic retention policy for aggregated data
- Period selector in chart section with translated options

Database Changes:
- New table: aggregated_statistics (stores pre-calculated averages)
- New table: scan_progress (tracks blockchain scanning progress)
- Methods for saving/retrieving aggregated stats
- Automatic cleanup based on retention rules

Backend:
- Blockchain scanner starts on boot, scans from block 1 to current
- Sequential block fetching (10 blocks per batch) to avoid RPC overload
- Aggregation by period: daily (60 days), 3-day (180 days), weekly (420 days), monthly (infinite)
- Updates every 10 minutes with new blocks
- API endpoints: /api/aggregated-stats/:type, /api/scan-progress
- Admin endpoint: /api/rescan-blockchain

Frontend:
- Period selector dropdown with 7 options
- loadAggregatedChartData() function for fetching aggregated data
- Charts update based on selected period
- Real-time mode still shows last 60 validated blocks
- Period-specific labels and info text

Translation:
- Added chart period translations for IT and EN
- Period selector fully translated

Retention Policy:
- Daily: last 60 records (60 days)
- 3-day: last 60 records (180 days)
- Weekly: last 60 records (420 days ~ 14 months)
- Monthly: infinite (for 5 years and max periods)
- Aggregated statistics table never cleared by 'Gestione Storico Dati'

Scanner Optimization:
- Sequential block fetching to prevent socket hang up errors
- 50ms pause between blocks, 500ms between batches
- Progress tracking for resuming after restart
- Reduced batch size from 100 to 10 blocks

--- a/public/index.html
+++ b/public/index.html
@@ -214,6 +214,21 @@
           <span class="toggle-icon">▼</span>
         </div>
         <div class="card-content" id="chartsContent">
+          <!-- Period Selector -->
+          <div class="period-selector">
+            <label for="chartPeriod" data-i18n="charts.period_label">Period:</label>
+            <select id="chartPeriod" onchange="changePeriod(this.value)">
+              <option value="realtime" data-i18n="charts.period_realtime">Real-Time (Last 60 blocks)</option>
+              <option value="30days" data-i18n="charts.period_30days">Last 30 Days (Daily)</option>
+              <option value="3months" data-i18n="charts.period_3months">Last 3 Months (3-day avg)</option>
+              <option value="6months" data-i18n="charts.period_6months">Last 6 Months (Weekly avg)</option>
+              <option value="1year" data-i18n="charts.period_1year">Last Year (Weekly avg)</option>
+              <option value="5years" data-i18n="charts.period_5years">Last 5 Years (Monthly avg)</option>
+              <option value="max" data-i18n="charts.period_max">Max (Monthly avg)</option>
+            </select>
+            <span id="periodInfo" class="period-info"></span>
+          </div>
+
           <!-- Real-time Stats Cards -->
           <div class="realtime-stats-grid">
             <div class="stat-card">
