Compact blockchain scan progress to single line with real-time updates
Changes:
- Redesigned scan progress indicator to display on one line
- Horizontal layout with inline elements separated by pipes
- Reduced vertical space occupation
- Update interval reduced from 30s to 5s (synchronized with WebSocket)

UI Layout:
- Format: 🔍 Scan: Block: #4,520 | Total: 4,520 | ⏳ In progress [====----] 45.2%
- All information on single line with compact spacing
- Progress bar aligned to the right with flex layout
- Minimal padding (0.6rem vertical)

Labels Updated:
- IT: 'Scansione:' 'Blocco:' 'Totale:' 'In corso' 'Completata'
- EN: 'Scan:' 'Block:' 'Total:' 'In progress' 'Completed'

CSS Changes:
- Flexbox horizontal layout with gap: 0.75rem
- Compact font-size: 0.85rem throughout
- Progress bar flex: 1 with min-width: 80px
- Pipe separators with border-color
- Reduced padding and margins

Performance:
- Now updates every 5 seconds instead of 30 seconds
- Synchronized with WebSocket broadcast frequency
- Shows real-time scanning progress

Benefits:
- Less vertical space used (single line vs 4 lines)
- Easier to read at a glance
- More frequent updates show active scanning
- Clean, professional appearance

--- a/public/index.html
+++ b/public/index.html
@@ -231,26 +231,24 @@
 
           <!-- Blockchain Scan Progress -->
           <div class="scan-progress-container" id="scanProgressContainer" style="display: none;">
-            <div class="scan-progress-header">
-              <span class="scan-progress-icon">🔍</span>
-              <span class="scan-progress-title" data-i18n="charts.scan_progress">Blockchain Scan Progress</span>
-            </div>
-            <div class="scan-progress-content">
-              <div class="scan-progress-info">
-                <span data-i18n="charts.scan_last_block">Last scanned block:</span>
-                <strong id="scanLastBlock">-</strong>
-              </div>
-              <div class="scan-progress-info">
-                <span data-i18n="charts.scan_total_blocks">Total blocks scanned:</span>
-                <strong id="scanTotalBlocks">-</strong>
-              </div>
-              <div class="scan-progress-status" id="scanStatus">
-                <span class="scan-status-badge" id="scanStatusBadge">⏳</span>
-                <span id="scanStatusText" data-i18n="charts.scan_in_progress">Scanning in progress...</span>
-              </div>
-              <div class="scan-progress-bar">
-                <div class="scan-progress-fill" id="scanProgressFill" style="width: 0%"></div>
-              </div>
+            <span class="scan-progress-icon">🔍</span>
+            <span class="scan-progress-label" data-i18n="charts.scan_progress">Scan:</span>
+            <span class="scan-progress-info">
+              <span data-i18n="charts.scan_block">Block:</span>
+              <strong id="scanLastBlock">-</strong>
+            </span>
+            <span class="scan-progress-separator">|</span>
+            <span class="scan-progress-info">
+              <span data-i18n="charts.scan_total">Total:</span>
+              <strong id="scanTotalBlocks">-</strong>
+            </span>
+            <span class="scan-progress-separator">|</span>
+            <span class="scan-progress-status" id="scanStatus">
+              <span class="scan-status-badge" id="scanStatusBadge">⏳</span>
+              <span id="scanStatusText" data-i18n="charts.scan_in_progress">Scanning...</span>
+            </span>
+            <div class="scan-progress-bar">
+              <div class="scan-progress-fill" id="scanProgressFill" style="width: 0%"></div>
             </div>
           </div>
 
@@ -591,8 +589,8 @@
       // Carica e mostra il progresso della scansione blockchain
       if (typeof loadScanProgress === 'function') {
         loadScanProgress();
-        // Aggiorna il progresso ogni 30 secondi
-        setInterval(loadScanProgress, 30000);
+        // Aggiorna il progresso ogni 5 secondi (sincronizzato con broadcast WebSocket)
+        setInterval(loadScanProgress, 5000);
       }
       
       // Aggiorna notifiche ogni 30 secondi
